force-app/main/default/objects/Order/fields/Buyer_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Whatsapp__c</fullName>
    <label>Buyer WhatsApp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>