force-app/main/default/objects/Order/fields/DeliveryConfirmedAt__c.field-meta.xml
<CustomField>
    <fullName>DeliveryConfirmedAt__c</fullName>
    <label>Delivery Confirmed At</label>
    <type>DateTime</type>
    <description
  >Timestamp set by EscrowBridgeController.confirmDelivery when the bridge confirms on-chain delivery. Used by EscrowMonitorScheduler to calculate the safety delay before releasing payment.</description>
</CustomField>