force-app/main/default/objects/Order/fields/Dest_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Dest_Latitude__c</fullName>
    <label>Destination Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>