force-app/main/default/objects/Order/fields/Dest_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Dest_Longitude__c</fullName>
    <label>Destination Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>