force-app/main/default/objects/Order/fields/EscrowStatus__c.field-meta.xml
<CustomField>
    <fullName>EscrowStatus__c</fullName>
    <label>Escrow Status</label>
    <type>Text</type>
    <length>20</length>
    <description
  >Mirrors the on-chain escrow state. Values: FUNDED | DELIVERED | DISPUTED | FROZEN | RELEASING | RELEASED | REFUNDING | REFUNDED. Kept in sync by EscrowBridgeController.</description>
</CustomField>