force-app/main/default/objects/Order/fields/Live_Address__c.field-meta.xml
<CustomField>
    <fullName>Live_Address__c</fullName>
    <label>Live Address</label>
    <length>255</length>
    <description
  >Rider current street address from Nominatim reverse geocoding</description>
    <type>Text</type>
</CustomField>