force-app/main/default/objects/Order/fields/Live_ETA__c.field-meta.xml
<CustomField>
    <fullName>Live_ETA__c</fullName>
    <label>Live ETA (minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <description>ETA in minutes from OSRM routing engine</description>
    <type>Number</type>
</CustomField>