force-app/main/default/objects/Order/fields/Live_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Live_Latitude__c</fullName>
    <label>Live Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>