force-app/main/default/objects/Order/fields/Live_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Live_Longitude__c</fullName>
    <label>Live Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>