force-app/main/default/objects/Order/fields/PaymentDeadline__c.field-meta.xml
<CustomField>
    <fullName>PaymentDeadline__c</fullName>
    <label>Payment Deadline</label>
    <type>Date</type>
    <description
  >Payment due date = contract signing date + net days from PaymentTerms. Used as escrow deadline.</description>
</CustomField>