force-app/main/default/objects/Order/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>USDC_Escrow</fullName>
                <label>USDC Escrow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>