force-app/main/default/objects/Order/fields/Rider_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Rider_Device_Id__c</fullName>
    <label>Rider Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>