force-app/main/default/objects/Order/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <label>Shipped Date</label>
    <type>DateTime</type>
</CustomField>