force-app/main/default/objects/Order/fields/Shipping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Amount__c</fullName>
    <label>Shipping Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>