force-app/main/default/objects/Order/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <type>Text</type>
    <length>80</length>
</CustomField>