force-app/main/default/objects/Order/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <label>Shipping Zip Code</label>
    <type>Text</type>
    <length>20</length>
</CustomField>