force-app/main/default/objects/Order/fields/SourceQuote__c.field-meta.xml
<CustomField>
    <fullName>SourceQuote__c</fullName>
    <label>Source Quote</label>
    <type>Lookup</type>
    <referenceTo>TALEXO_Quote__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
</CustomField>