force-app/main/default/objects/Order/fields/Sparks_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sparks_Discount__c</fullName>
    <label>Sparks Discount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>