force-app/main/default/objects/Order/fields/Stripe_Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_Id__c</fullName>
    <description
  >Stores the Stripe Payment Intent ID after a successful checkout, for reconciliation and refund purposes.</description>
    <label>Stripe Payment Intent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>