force-app/main/default/objects/Order/fields/Tracking_Token__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Token__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>